--- a/admin.html
+++ b/admin.html
@@ -128,6 +128,21 @@
       background: #b91c1c;
     }
 
+    .btn-secondary {
+      padding: 4px 8px;
+      font-size: 0.8rem;
+      border-radius: 4px;
+      border: 1px solid #9ca3af;
+      background: #e5e7eb;
+      color: #111827;
+      cursor: pointer;
+      margin-right: 4px;
+    }
+
+    .btn-secondary:hover {
+      background: #d1d5db;
+    }
+
     .message {
       font-size: 0.85rem;
       margin-top: 6px;
@@ -195,6 +210,12 @@
       background: #e5e7eb;
       color: #374151;
       margin-right: 4px;
+    }
+
+    .small-text {
+      font-size: 0.8rem;
+      color: #6b7280;
+      margin-left: 8px;
     }
   </style>
 </head>
@@ -299,7 +320,7 @@
         </form>
 
         <div style="margin-top: 12px;">
-          <h3 style="margin: 0; font-size: 1rem;">Divisions</h3>
+          <h3 style="margin: 0, font-size: 1rem;">Divisions</h3>
           <div id="division-list-message" class="message"></div>
           <div id="divisions-container"></div>
         </div>
@@ -310,7 +331,7 @@
     <div class="card">
       <h2>Athletes for Division</h2>
       <p class="note">
-        Select a competition and division, then add athletes (name, NOC, bib) to that division.
+        Select a competition and division, then add or edit athletes (name, NOC, bib) for that division.
       </p>
 
       <label for="athlete-comp-select">Competition</label>
@@ -323,7 +344,7 @@
         <option value="">Select a division</option>
       </select>
 
-      <div id="athlete-section" style="margin-top: 10px; display: none;">
+      <div id="athlete-section" style="margin-top: 10px, display: none;">
         <form id="athlete-form">
           <div class="form-row">
             <div>
@@ -343,7 +364,9 @@
               <input id="ath-bib" type="text" placeholder="e.g., 12" />
             </div>
           </div>
-          <button type="submit" class="primary">Add athlete to division</button>
+          <button type="submit" class="primary" id="athlete-submit-btn">Add athlete to division</button>
+          <button type="button" class="btn-secondary" id="athlete-cancel-edit-btn" style="display:none;">Cancel edit</button>
+          <span class="small-text" id="athlete-mode-label"></span>
           <div id="athlete-form-message" class="message"></div>
         </form>
 
@@ -358,7 +381,6 @@
 
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script>
-    // Your real Supabase project values
     const SUPABASE_URL = "https://cbwifmgrekugoljcaqoh.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNid2lmbWdyZWt1Z29samNhcW9oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ3MDcxODYsImV4cCI6MjA4MDI4MzE4Nn0.Rp5MCWYQL9SxbnBEJ7e76gbbd95qsStaLE2Hkhpn47g";
 
@@ -386,9 +408,14 @@
     const athleteFormMsg = document.getElementById("athlete-form-message");
     const athleteListMsg = document.getElementById("athlete-list-message");
     const athletesContainer = document.getElementById("athletes-container");
+    const athleteSubmitBtn = document.getElementById("athlete-submit-btn");
+    const athleteCancelEditBtn = document.getElementById("athlete-cancel-edit-btn");
+    const athleteModeLabel = document.getElementById("athlete-mode-label");
 
     let competitionsCache = [];
     let divisionsCacheByCompetition = {};
+    let editingEntryId = null;
+    let editingAthleteId = null;
 
     function setFormMessage(text, type = "info") {
       formMsg.textContent = text || "";
@@ -420,6 +447,29 @@
       athleteListMsg.className = "message " + (type === "error" ? "error" : type === "success" ? "success" : "");
     }
 
+    function enterAddMode() {
+      editingEntryId = null;
+      editingAthleteId = null;
+      athleteSubmitBtn.textContent = "Add athlete to division";
+      athleteCancelEditBtn.style.display = "none";
+      athleteModeLabel.textContent = "";
+      setAthleteFormMessage("");
+      athleteForm.reset();
+    }
+
+    function enterEditMode({ entryId, athleteId, firstName, lastName, noc, bib }) {
+      editingEntryId = entryId;
+      editingAthleteId = athleteId;
+      document.getElementById("ath-first-name").value = firstName || "";
+      document.getElementById("ath-last-name").value = lastName || "";
+      document.getElementById("ath-noc").value = noc || "";
+      document.getElementById("ath-bib").value = bib || "";
+      athleteSubmitBtn.textContent = "Save athlete changes";
+      athleteCancelEditBtn.style.display = "inline-block";
+      athleteModeLabel.textContent = "Editing existing athlete in this division";
+      setAthleteFormMessage("");
+    }
+
     async function requireAuth() {
       const { data } = await supabase.auth.getSession();
       if (!data || !data.session) {
@@ -430,6 +480,10 @@
     logoutBtn.addEventListener("click", async () => {
       await supabase.auth.signOut();
       window.location.href = "/admin-login.html";
+    });
+
+    athleteCancelEditBtn.addEventListener("click", () => {
+      enterAddMode();
     });
 
     function formatStatusTag(status) {
@@ -443,7 +497,7 @@
 
     function formatDate(d) {
       if (!d) return "";
-      return d; // Supabase returns YYYY-MM-DD for date type
+      return d;
     }
 
     function renderCompetitions(list) {
@@ -456,18 +510,16 @@
         return;
       }
 
-      const rows = list.map(c => {
-        return `
-          <tr>
-            <td>${c.name || ""}</td>
-            <td>${c.location || ""}</td>
-            <td>${formatDate(c.start_date)}</td>
-            <td>${formatDate(c.end_date)}</td>
-            <td>${formatStatusTag(c.status)}</td>
-            <td>${c.created_at ? c.created_at.slice(0, 10) : ""}</td>
-          </tr>
-        `;
-      }).join("");
+      const rows = list.map(c => `
+        <tr>
+          <td>${c.name || ""}</td>
+          <td>${c.location || ""}</td>
+          <td>${formatDate(c.start_date)}</td>
+          <td>${formatDate(c.end_date)}</td>
+          <td>${formatStatusTag(c.status)}</td>
+          <td>${c.created_at ? c.created_at.slice(0, 10) : ""}</td>
+        </tr>
+      `).join("");
 
       competitionsContainer.innerHTML = `
         <table>
@@ -481,9 +533,7 @@
               <th>Created</th>
             </tr>
           </thead>
-          <tbody>
-            ${rows}
-          </tbody>
+          <tbody>${rows}</tbody>
         </table>
       `;
 
@@ -521,9 +571,7 @@
               <th>Created</th>
             </tr>
           </thead>
-          <tbody>
-            ${rows}
-          </tbody>
+          <tbody>${rows}</tbody>
         </table>
       `;
     }
@@ -562,7 +610,33 @@
           }
 
           setAthleteListMessage("Athlete removed from division.", "success");
+          enterAddMode();
           await loadAthletesForDivision(divisionId);
+        });
+      });
+    }
+
+    function attachEditHandlers() {
+      const buttons = athletesContainer.querySelectorAll(".edit-entry-btn");
+      buttons.forEach(btn => {
+        btn.addEventListener("click", () => {
+          const entryId = Number(btn.dataset.entryId);
+          const athleteId = Number(btn.dataset.athleteId);
+          if (!entryId || !athleteId) return;
+
+          const firstName = btn.dataset.firstName || "";
+          const lastName = btn.dataset.lastName || "";
+          const noc = btn.dataset.noc || "";
+          const bib = btn.dataset.bib || "";
+
+          enterEditMode({
+            entryId,
+            athleteId,
+            firstName,
+            lastName,
+            noc,
+            bib
+          });
         });
       });
     }
@@ -583,6 +657,18 @@
             <td>${e.bib_number || ""}</td>
             <td>${e.created_at ? e.created_at.slice(0, 10) : ""}</td>
             <td>
+              <button
+                type="button"
+                class="btn-secondary edit-entry-btn"
+                data-entry-id="${e.id}"
+                data-athlete-id="${e.athlete_id}"
+                data-first-name="${a.first_name || ""}"
+                data-last-name="${a.last_name || ""}"
+                data-noc="${a.noc || ""}"
+                data-bib="${e.bib_number || ""}"
+              >
+                Edit
+              </button>
               <button
                 type="button"
                 class="btn-danger delete-entry-btn"
@@ -606,12 +692,11 @@
               <th>Actions</th>
             </tr>
           </thead>
-          <tbody>
-            ${rows}
-          </tbody>
+          <tbody>${rows}</tbody>
         </table>
       `;
 
+      attachEditHandlers();
       attachDeleteHandlers();
     }
 
@@ -691,6 +776,7 @@
         .from("entries")
         .select(`
           id,
+          athlete_id,
           bib_number,
           created_at,
           athletes (
@@ -803,6 +889,7 @@
     athleteCompSelect.addEventListener("change", async () => {
       const compId = athleteCompSelect.value;
       athleteSection.style.display = "none";
+      enterAddMode();
       setAthleteListMessage("Select a division to view athletes.");
       athletesContainer.innerHTML = "";
       await loadAthleteDivisionsForCompetition(compId);
@@ -812,17 +899,18 @@
       const divisionId = athleteDivSelect.value;
       if (!divisionId) {
         athleteSection.style.display = "none";
+        enterAddMode();
         setAthleteListMessage("Select a division to view athletes.");
         athletesContainer.innerHTML = "";
         return;
       }
       athleteSection.style.display = "block";
+      enterAddMode();
       await loadAthletesForDivision(Number(divisionId));
     });
 
     athleteForm.addEventListener("submit", async (e) => {
       e.preventDefault();
-      setAthleteFormMessage("Adding athlete...");
 
       const compId = athleteCompSelect.value;
       const divisionId = athleteDivSelect.value;
@@ -842,7 +930,42 @@
         return;
       }
 
-      // 1) Create athlete
+      // EDIT MODE
+      if (editingEntryId && editingAthleteId) {
+        setAthleteFormMessage("Saving athlete changes...");
+
+        const { error: athleteUpdateError } = await supabase
+          .from("athletes")
+          .update({ first_name: firstName, last_name: lastName, noc: noc || null })
+          .eq("id", editingAthleteId);
+
+        if (athleteUpdateError) {
+          console.error(athleteUpdateError);
+          setAthleteFormMessage("Failed to update athlete: " + (athleteUpdateError.message || ""), "error");
+          return;
+        }
+
+        const { error: entryUpdateError } = await supabase
+          .from("entries")
+          .update({ bib_number: bib || null })
+          .eq("id", editingEntryId);
+
+        if (entryUpdateError) {
+          console.error(entryUpdateError);
+          setAthleteFormMessage("Athlete updated, but failed to update entry: " + (entryUpdateError.message || ""), "error");
+          return;
+        }
+
+        setAthleteFormMessage("Athlete updated.", "success");
+        const divIdNum = Number(divisionId);
+        enterAddMode();
+        await loadAthletesForDivision(divIdNum);
+        return;
+      }
+
+      // ADD MODE
+      setAthleteFormMessage("Adding athlete...");
+
       const { data: newAthlete, error: athleteError } = await supabase
         .from("athletes")
         .insert({
@@ -859,7 +982,6 @@
         return;
       }
 
-      // 2) Create entry
       const { error: entryError } = await supabase
         .from("entries")
         .insert({
@@ -889,3 +1011,4 @@
   </script>
 </body>
 </html>
+
